# Unsupervised_Learning_Anomaly_Detection

./: HOMEWORK.md  LESSON_THEORY.md  README.md  anomaly_detection_updated.py  cluster_summary.csv  customer_analysis_results.csv  customer_behavior_analyzer.py  detected_anomalies.csv  flagged_influencers.csv  homework.py  influencer_data.csv  pyproject.toml  requirements.txt
